configs/ingress-resource/ingress-host.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: some-ingress-name
  namespace: namespace
spec:
  rules:
    - host: wear.my-online-store.com
      http:
        paths:
          - backend:
              serviceName: some-service-name
              servicePort: 8080
    - host: watch.my-online-store.com
      http:
        paths:
          - backend:
              serviceName: some-service-name
              servicePort: 8080
